Add an output canvas for testing.

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,8 @@
       <h1 id="notSupported">Your browser does not support the Camera API.</h1>
     </div>
 
+    <canvas id="tempResult" width="640" height="480"></canvas>
+
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
