--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,7 @@
     </script>
 
     <!-- build:js scripts/main.js -->
+    <script src="scripts/edges.js"></script>
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
 </body>
