--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,9 @@
     </script>
 
     <!-- build:js scripts/main.js -->
+    <script src="scripts/imageUtils.js"></script>
     <script src="scripts/edges.js"></script>
+    <script src="scripts/hough.js"></script>
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
 </body>
