Add some tests for the hough and imageUtils scripts.

--- a/test/index.html
+++ b/test/index.html
@@ -18,6 +18,11 @@
     </script>
 
     <!-- include source files here... -->
+    <script src="scripts/imageUtils.js"></script>
+    <script src="../app/scripts/imageUtils.js"></script>
+    <!-- script src="scripts/edges.js"></script -->
+    <script src="scripts/hough.js"></script>
+    <script src="../app/scripts/hough.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/test.js"></script>
