Yeah, this is totally not working…  I need to figure something else out somehow.

--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,8 @@
     </div>
 
     <canvas id="tempResult" width="640" height="480"></canvas>
+    <br>
+    <canvas id="houghResult" width="1600" height="90" style="border: 1px solid black"></canvas>
 
 
     <!-- build:js scripts/vendor.js -->
